# album-notifier

./: .gitignore  Cargo.toml  README.md  install.py
installers/: linux.py  osx.py  win.py
src/: db.rs  main.rs  model.rs
src/models/: Album.rs  Artist.rs  album.rs  mod.rs
src/services/: mod.rs  spotify.rs  toast.rs
