[package]
name = "music_notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
notify-rust = "4"
cronjob = "0.4.17"
urlencoding = "2.1.2"
